[project]
name = "drivers"
version = "0.1.0"
authors = [
    { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "Web drivers"
dependencies = [
    "bs4",
    "requests",
    "selenium",
    "build",
    "pytest",
]

[project.urls]
source = "https://github.com/notarealdeveloper/drivers"
download = "https://pypi.org/project/drivers/#files"

